# nomad-mpt

./: .gitignore  README.md
bindings/go/: README.md  go.mod
bindings/go/examples/basic/: main.go
bindings/go/monaddb/: db.go  db_test.go  doc.go  errors.go  fifo.go  node.go  nomad_mpt.h
bindings/go/scripts/: build.sh
bindings/rust/: Cargo.toml  README.md
bindings/rust/nomad-mpt-sys/: Cargo.toml  build.rs
bindings/rust/nomad-mpt-sys/examples/: async_fifo.rs  basic.rs  disk_persistence.rs
bindings/rust/nomad-mpt-sys/src/: async_fifo.rs  bridge.cpp  bridge.hpp  bridge_fifo.cpp  bridge_fifo.hpp  ck_wrapper.c  ck_wrapper.h  lib.rs
bindings/rust/nomad-mpt-sys/tests/: integration_test.rs
core/: CMakeLists.txt
core/src/: nomad_mpt.cpp
depend/monad/: CMakeLists.txt
depend/monad/category/async/: CMakeLists.txt  util.cpp
depend/monad/category/core/: CMakeLists.txt  arm_cpu_detect.c  cpu_relax.h  keccak.c  keccak_impl.S
depend/monad/category/mpt/: CMakeLists.txt
doc/: ffi_plan.md  reth_uses_monanddb.md
patches/: arm64-keccak.patch  openssl-arm64.patch
scripts/: sync_ck.sh  sync_monad.sh
